--- a/zxinglibrary/src/main/AndroidManifest.xml
+++ b/zxinglibrary/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.example.zxinglibrary">
+    package="com.kuro.zxinglibrary">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name=".activity.CaptureActivity"
+            android:name="com.kuro.zxinglibrary.activity.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
